--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,10 @@ body {
    }
 }
 
+.main {
+   min-height: 90vh;
+   overflow: hidden;
+}
 
 // === Header ===
 
@@ -56,6 +60,10 @@ body {
    .nav-link {
       display: grid;
       justify-items: center;
+
+      &.active {
+         pointer-events: none;
+      }
    }
 }
 
@@ -199,6 +207,10 @@ body {
    margin-bottom: 20px;
 }
 
+.card {
+   min-height: 400px;
+}
+
 .card,
 .card a {
    overflow: hidden;
@@ -280,8 +292,31 @@ body {
 }
 
 .section-time {
-   height: 70vh;
+   color: $light-color-op75;
+   margin: 20px;
+   padding: 20px;
 }
+
+.section-time h1 {
+   margin-top: 0;
+}
+
+.timer {
+   display: flex;
+   font-size: 20px;
+
+   &-time {
+      &:not(:last-child) {
+         margin-right: 5px;
+      }
+
+      &:not(:first-child) {
+         margin-left: 5px;
+      }
+   }
+}
+
+
 
 // === Footer ===
 
